fix: improve api schema and regenerate oapi-codegen files
